<resources>
    <string name="app_name">Doplery</string>
    <string name="intro_header">Logged In</string>
    <string name="login_hint_value">Email (e.g. test@gmail.com)</string>
    <string name="password_hint_value">Password</string>
    <string name="login_button">Login</string>
    <string name="upload_button">Upload</string>
    <string name="action_sign_out_button">Sign Out</string>
    <string name="register_button">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_firstName">First Name</string>
    <string name="register_familyName">Family Name</string>
    <string name="finish_register">Finish</string>
    <string name="advert_title">Title</string>
</resources>
